@@ -1,3 +1,7 @@
+2005-12-02  Gary Benson <gbenson@redhat.com>
+
+	* gnu/testlet/java/io/FileInputStream/security.java: New test.
+
 2005-12-01  Gary Benson <gbenson@redhat.com>
 
 	* gnu/testlet/java/io/File/security.java: Annotate
